login into different account and chat succeeds!
