# router/app.go
@@ -27,6 +27,8 @@ func Router() *gin.Engine{
 	router.GET("/index",service.GetIndex)
 	router.GET("/toRegister", service.ToRegister)
 	router.GET("/toChat", service.ToChat)
+	router.GET("/chat", service.Chat)
+	router.POST("/searchFriends", service.SearchFriends)
 
 	//用户模块
 	router.GET("/user/GetUserList",service.GetUserList)
